apps/actual/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actual
  labels:
    app.kubernetes.io/name: actual
    app.kubernetes.io/instance: actual
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: actual
      app.kubernetes.io/instance: actual
  template:
    metadata:
      labels:
        app.kubernetes.io/name: actual
        app.kubernetes.io/instance: actual
    spec:
      containers:
        - name: actual
          # renovate: datasource=docker
          image: actualbudget/actual-server:24.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5006
              protocol: TCP
          livenessProbe:
            httpGet:
              port: 5006
              path: /
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              port: 5006
              path: /
              scheme: HTTP
            periodSeconds: 10
            timeoutSeconds: 10
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
