apps/actual/templates/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: actual-dashboard
  labels:
    app.kubernetes.io/name: actual
    app.kubernetes.io/instance: actual
spec:
  type: ClusterIP
  ports:
    - port: 5006
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: actual
    app.kubernetes.io/instance: actual
